@@ -2,6 +2,7 @@ virtualbox (4.1.16-dfsg-2) UNRELEASED; urgency=low
 
   * Fix unregistering vboxnet devices. (LP: #1009156)
     - Add 37-fix-unregister-netdevice.patch, backported from upstream.
+  * Switch from python-central to dh_python2. (Closes: #617143)
 
  -- Felix Geyer <debfx-pkg@fobos.de>  Sun, 10 Jun 2012 19:59:09 +0200
 
